# Rust_GameBoy

./: Cargo.toml  README.md  apu.rs  cpu.rs  design.md  gameboy.rs  gpu_ppu.rs  joypad.rs  main.rs  mmu.rs  ppu.rs  requirements.md  rom.rs  sdl3.rs  tasks.md  timer.rs
shaders/: ppu_compute.glsl
src/: GB.rs  apu.rs  cpu.rs  display.rs  emulator.rs  gameboy.rs  input.rs  joypad.rs  lib.rs  main.rs  mmu.rs  ppu.rs  rom.rs  sdl3.rs  timer.rs
src/GB/: BUS.rs  CPU.rs  RAM.rs  bus_apu.rs  bus_io.rs  bus_mem.rs  debug.rs  instructions.rs  mbc.rs  mod.rs  registers.rs  types.rs
src/core/: api.rs  apu.rs  basic_function_test.rs  cycles.rs  emulator.rs  error.rs  mod.rs
src/core/cpu/: arithmetic.rs  bit.rs  cb.rs  control.rs  cpu.rs  cycles.rs  decode_and_execute.rs  flags.rs  instruction.rs  interrupts.rs  io.rs  jump.rs  load.rs  logic.rs  mod.rs  prelude.rs  register_utils.rs  registers.rs  stack.rs  timer.rs  undocumented.rs
src/core/mmu/: lcd_registers.rs  mbc5.rs  mmu.rs  mod.rs
src/core/mmu/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
src/core/ppu/: background.rs  display.rs  lcd.rs  mod.rs  pixel.rs  ppu.rs  registers.rs  sprite.rs  tile.rs  types.rs  vram.rs  window.rs
src/core/utils/: logger.rs
src/hardware/apu/: mod.rs
src/instructions/: arithmetic.rs  control.rs  inc_dec.rs  jump.rs  ld.rs  misc.rs  mod.rs  rotate.rs  stack.rs
src/interface/: audio.rs  mod.rs  sdl3_display.rs  video.rs
src/interface/input/: mod.rs
src/utils/: framebuffer_api.rs  logger.rs
