[package]
name = "rust_gb"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl3 = { version = "0.17.3", features = ["use-vcpkg"] }
sdl3-sys = "0.6"
walkdir = "2.5.0"
crossbeam = "0.8.4"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(lazy_lock)'] }
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
